# dtd-rs

./: Cargo.toml  README.md
.github/workflows/: integrated-tests.yml
dtd-macro/: Cargo.toml  build.rs
dtd-macro/src/: lib.rs
dtd-parser/: Cargo.toml
dtd-parser/src/: attlist.rs  element.rs  entity.rs  lib.rs
src/: lib.rs
src/parser/: attlist.rs  attribute.rs  element.rs  entity.rs  mod.rs
tests/: test_parse_docutils_dtd.rs  test_parse_docutils_dtd_macro.rs
