[package]
name = "dtd-parser"
version = "0.1.0-alpha2"
edition = "2018"
authors = ["songww <sww4718168@163.com>"]
description = "A DTD file parser."
documentation = "https://docs.rs/dtd-parser"
homepage = "https://github.com/songww/dtd-rs"
keywords = ["dtd", "xml", "document", "type", "definition"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99", features = [ "as_ref", "as_mut", "deref", "deref_mut",  "from", "into", "into_iterator", "iterator", "try_into", "display" ] }
either = "1.6"
indexmap = { version = "1.7", features = ["std"] }
nom = "6"
nom-tracable = "0.7"
nom_locate = "3"
nom-greedyerror = "0.3"

[features]
default = []
trace   = ["nom-tracable/trace"]
